--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <img id="logo" src="images/logo.png">
 </div>
 <div id="navbar">
-<a href="index.html">Forside</a>
+<a href="index.html">Home</a>
 <a href="events.html">Events</a>
-<a href="donate.html">Donation</a>
-</div>
+<a href="donate.html">Donate</a>
+<a href="special.html">Special Donation Events</a>
+<a href="menu.html">Menu</a>
+</div> 
 </header>
 <body>
 <div class="pics">
