--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style/master.css">
+<link rel="stylesheet" type="text/css" href="style/movingimages.css">
+<script src="scripts/movingimages.js"></script>
 <title>Jul På Halvor</title>
 </head>
 <header>
@@ -18,6 +20,12 @@
 <body>
 <div class="pics">
 <img src="images/pic1.png">
+</div>
+<div id="container">
+<div class='a'></div>
+    <div class='b'></div>
+    <div class='c'></div>
+</div>
 </body>
 <footer>
 
