--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style/master.css">
-<link rel="stylesheet" type="text/css" href="style/movingimages.css">
-<script src="scripts/movingimages.js"></script>
+<script src="scripts/mimages.js"></script>
 <title>Jul På Halvor</title>
 </head>
 <header>
@@ -21,11 +20,9 @@
 <div class="pics">
 <img src="images/pic1.png">
 </div>
-<div id="container">
-<div class='a'></div>
-    <div class='b'></div>
-    <div class='c'></div>
-</div>
+<input id="toggle" type="button" value=" Stop " />
+<div id="canvas"></div>
+<div id="info"></div>
 </body>
 <footer>
 
