--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style/master.css">
+<link rel="stylesheet" type="text/css" href="style/fail.css">
 <script src="scripts/mimages.js"></script>
 <title>Jul På Halvor</title>
 </head>
@@ -17,12 +18,14 @@
 </div>
 </header>
 <body>
-<div class="pics">
-<img src="images/pic1.png">
-</div>
-<input id="toggle" type="button" value=" Stop " />
-<div id="canvas"></div>
-<div id="info"></div>
+
+
+  <div id="container">
+     <img class='a' src="images/haandvark.jpg" />
+     <img class='b' src="images/haandv.jpg" />
+     <img class='c' src="images/bordtennis.jpg" />
+   </div>
+   <img src="http://i.stack.imgur.com/S9o1r.png" />
 </body>
 <footer>
 
