--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="da">
 <head>
+<meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="style/master.css">
 <link rel="stylesheet" type="text/css" href="style/fail.css">
-<script src="scripts/mimages.js"></script>
+<script type="text/javascript" src"scripts/mimages.js></script>
 <title>Jul På Halvor</title>
+
 </head>
 <header>
 <br>
@@ -18,14 +20,14 @@
 </div>
 </header>
 <body>
-
-
   <div id="container">
+  <br>
      <img class='a' src="images/haandvark.jpg" />
+	 <br>
      <img class='b' src="images/haandv.jpg" />
+	 <br>
      <img class='c' src="images/bordtennis.jpg" />
    </div>
-   <img src="http://i.stack.imgur.com/S9o1r.png" />
 </body>
 <footer>
 
