--- a/donate.html
+++ b/donate.html
@@ -1,42 +1,38 @@
-<!DOCTYPE html>
-<html lang="da">
-<head>
-
+<!DOCTYPE html>																				<!-- Choosing Type Html -->
+<html lang="da"> 																			<!-- Html Tag And language -->
+<head>																						<!--Head Tag -->
 <meta charset="UTF-8">
-
-<link rel="stylesheet" type="text/css" href="style/master.css">
-
-<title>Jul På Halvor</title>
-
-</head>
-	<div id="container">
-		<div id="header">
-			<header>
-			<br>
-			<div id="logodiv">
-				<img id="logo" src="images/logo.png">
-			</div>
-			<br>
-			<div id="navbar">
-				<a href="index.html">Forside</a>
-				<a href="events.html">Events</a>
-				<a href="donate.html">Donation</a>
-			</div>
-			</header>
-		</div>
-		<div id="body">
-			<body>
-				<div id="form">
-					<form>
+<script type="text/javascript" language="javascript" src="scripts/#.js"></script>		<!-- Connect To Javascript -->
+<link rel="stylesheet" type="text/css" href="style/master.css">								<!-- Connect To Css Script -->
+<title>Jul På Halvor</title> 																<!-- Website Title -->
+</head>																						<!-- Head Tag Close -->
+	<div id="contentcontainer">																<!-- Content Container -->
+		<div id="header">																	<!-- Div Header -->
+			<header>																		<!-- Nav Input -->
+			<br>																			<!-- Side Down -->
+			<div id="logodiv">																<!-- Logo Container -->
+				<img id="logo" src="images/logo.png">										<!-- Site Logo -->
+			</div>																			<!-- Div Close -->
+			<br>																			<!-- Side Down -->
+			<div id="navbar">																<!-- Navigation Bar -->
+				<a href="index.html">Forside</a>											<!-- Nav Input -->
+				<a href="events.html">Events</a>											<!-- Nav Input -->
+				<a href="donate.html">Donation</a>											<!-- Nav Input -->
+			</div>																			<!-- Div Close -->
+			</header>																		<!-- Header Tag Close -->
+		</div>																				<!-- Div Close -->
+		<div id="body"> 																	<!-- Body Container -->
+			<body>																			<!-- Body Tag -->
+				<div id="form">																<!-- Form Container -->
+					<form>																	<!-- Form Tag -->
 						
-			</body>
-		</div>
-		<div id="footer">
-			<footer>
+					</form>																	<!-- Form Tag Close -->
+			</body>																			<!-- Body Tag Close -->
+		</div>																				<!-- Div Close -->
+		<div id="footer">																	<!-- Page Footer Container -->
+			<footer>																		<!-- Footer Tag-->
     
-			</footer>
-		</div>
-	</div>
-</html>
-
-  
+			</footer>																		<!-- Footer Tag Close -->
+		</div>																				<!-- Div Close -->
+	</div>																					<!-- Div Close -->
+</html>			
