--- a/donate.html
+++ b/donate.html
@@ -30,7 +30,15 @@
 						<input type="hidden" name="hosted_button_id" value="Z36ES2XCULZUU">
 						<input type="image" src="https://www.paypalobjects.com/da_DK/DK/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal – den sikre og nemme måde at betale på nettet.">
 						<img alt="" border="0" src="https://www.paypalobjects.com/da_DK/i/scr/pixel.gif" width="1" height="1">
-					</form>   
+					</form>  
+				</div>
+				<div id="mobilepaycontainer">
+					St&oslash;t med MobilePay<br><br>
+					Scan QR-koden direkte i MobilePay-appen<br>
+					Tryk p&aring; Betal &oslash;verst til h&oslash;jre!<br><br>
+					Eller indtast disse oplysninger i appen<br>
+					MobilePay-nummer:   	23 98 24 80
+					<img class="a" src="images/mobilepay.png">
 				</div>
 																	    		     		<!-- Form Tag Close -->
 			</body>																			<!-- Body Tag Close -->
