--- a/donate.html
+++ b/donate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>																				<!-- Choosing Type Html -->
 <html lang="da"> 																			<!-- Html Tag And language -->
 <head>																						<!--Head Tag -->
-<meta charset="UTF-8">
+<meta charset="utf-8" />
 <script type="text/javascript" language="javascript" src="scripts/#.js"></script>			<!-- Connect To Javascript -->
 <link rel="stylesheet" type="text/css" href="style/master.css">								<!-- Connect To Css Script -->
 <title>Jul På Halvor</title> 																<!-- Website Title -->
@@ -23,22 +23,23 @@
 		</div>																				<!-- Div Close -->
 		<div id="body"> 																	<!-- Body Container -->
 			<body>																			<!-- Body Tag -->
-				<div id="formcontainer">														<!-- Form Container -->
-																						<!-- Form Tag -->
-					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+				<div id="formcontainer">													<!-- Form Container -->
+					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"><!-- Form Tag -->
 						<input type="hidden" name="cmd" value="_s-xclick">
 						<input type="hidden" name="hosted_button_id" value="Z36ES2XCULZUU">
 						<input type="image" src="https://www.paypalobjects.com/da_DK/DK/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal – den sikre og nemme måde at betale på nettet.">
 						<img alt="" border="0" src="https://www.paypalobjects.com/da_DK/i/scr/pixel.gif" width="1" height="1">
 					</form>  
 				</div>
-				<div id="mobilepaycontainer">
+				<div id="mpcontainer">
+				<table>
+				</table>
 					St&oslash;t med MobilePay<br><br>
 					Scan QR-koden direkte i MobilePay-appen<br>
-					Tryk p&aring; Betal &oslash;verst til h&oslash;jre!<br><br>
+					Tryk p&aring; Betal øverst til h&oslash;jre!<br><br>
 					Eller indtast disse oplysninger i appen<br>
-					MobilePay-nummer:   	23 98 24 80
-					<img class="a" src="images/mobilepay.png">
+					MobilePay-nummer:23 98 24 80<img class="a"src="images/mobilepay.png">
+					
 				</div>
 																	    		     		<!-- Form Tag Close -->
 			</body>																			<!-- Body Tag Close -->
