--- a/donate.html
+++ b/donate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>																				<!-- Choosing Type Html -->
 <html lang="da"> 																			<!-- Html Tag And language -->
 <head>																						<!--Head Tag -->
-<meta charset="utf-8" />
+<meta charset="UTF-8" />
 <script type="text/javascript" language="javascript" src="scripts/#.js"></script>			<!-- Connect To Javascript -->
 <link rel="stylesheet" type="text/css" href="style/master.css">								<!-- Connect To Css Script -->
 <title>Jul På Halvor</title> 																<!-- Website Title -->
@@ -32,13 +32,14 @@
 					</form>  
 				</div>
 				<div id="mpcontainer">
-				<table>
-				</table>
+				<p id="text">
 					St&oslash;t med MobilePay<br><br>
 					Scan QR-koden direkte i MobilePay-appen<br>
 					Tryk p&aring; Betal øverst til h&oslash;jre!<br><br>
 					Eller indtast disse oplysninger i appen<br>
-					MobilePay-nummer:23 98 24 80<img class="a"src="images/mobilepay.png">
+					MobilePay-nummer:23 98 24 80
+				</p>
+					<img class="a"src="images/mobilepay.png" />
 					
 				</div>
 																	    		     		<!-- Form Tag Close -->
