--- a/donate.html
+++ b/donate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>																				<!-- Choosing Type Html -->
-<html lang="da"> 																			<!-- Html Tag And language -->
+<html lang="da-Dk"> 																			<!-- Html Tag And language -->
 <head>																						<!--Head Tag -->
 <meta charset="UTF-8" />
 <script type="text/javascript" language="javascript" src="scripts/#.js"></script>			<!-- Connect To Javascript -->
