--- a/donate.html
+++ b/donate.html
@@ -2,6 +2,7 @@
 <html lang="da-Dk"> 																			<!-- Html Tag And language -->
 <head>																						<!--Head Tag -->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<script type="text/javascript" language="javascript" src="scripts/fallingsnow_v6.js"></script>
 <script type="text/javascript" language="javascript" src="scripts/#.js"></script>			<!-- Connect To Javascript -->
 <link rel="stylesheet" type="text/css" href="style/master.css">								<!-- Connect To Css Script -->
 <title>Jul På Halvor</title> 																<!-- Website Title -->
@@ -42,6 +43,9 @@
 					<img class="a"src="images/mobilepay.png" />
 					
 				</div>
+				<div id="snowflakeContainer">
+    <p class="snowflake">*</p>
+</div>
 																	    		     		<!-- Form Tag Close -->
 			</body>																			<!-- Body Tag Close -->
 		</div>																				<!-- Div Close -->
