--- a/donate.html
+++ b/donate.html
@@ -2,7 +2,8 @@
 <html lang="da-Dk"> 																			<!-- Html Tag And language -->
 <head>																						<!--Head Tag -->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<link rel="stylesheet" type="text/css" href="style/master.css">								<!-- Connect To Css Script -->
+<link rel="stylesheet" type="text/css" href="style/master.css">		
+<link rel="stylesheet" href="css/jquery.fallingsnow.css">						<!-- Connect To Css Script -->
 <title>Jul På Halvor</title> 																<!-- Website Title -->
 </head>																						<!-- Head Tag Close -->
 	<div id="contentcontainer">																<!-- Content Container -->
@@ -42,9 +43,11 @@
 					
 				</div>
 				<div id="snowflakeContainer">
-    <p class="snowflake">*</p>
+				<p class="snowflake">*</p>
 </div>
 <script type="text/javascript" language="javascript" src="scripts/fallingsnow_v6.js"></script>
+<script src="js/jquery.fallingsnow.min.js"></script>
+
 																	    		     		<!-- Form Tag Close -->
 			</body>																			<!-- Body Tag Close -->
 		</div>																				<!-- Div Close -->
